--- a/notebooks/task3.ipynb
+++ b/notebooks/task3.ipynb
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Exploring"
+    "### Data Exploration"
    ]
   },
   {
@@ -671,10 +671,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "created_at             object\n",
+       "source                 object\n",
+       "original_text          object\n",
+       "sentiment             float64\n",
+       "polarity              float64\n",
+       "subjectivity          float64\n",
+       "lang                   object\n",
+       "favorite_count          int64\n",
+       "retweet_count           int64\n",
+       "original_author        object\n",
+       "followers_count         int64\n",
+       "friends_count           int64\n",
+       "possibly_sensitive     object\n",
+       "hashtags               object\n",
+       "user_mentions          object\n",
+       "place                  object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# datatype of columns\n",
+    "tweets_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# selecting neccessary columns for topic modelling\n",
+    "#tweet_data = tweet_data[['original_text', 'polarity']]\n",
+    "#tweet_data.head()\n",
+    "\n",
+    "tweets_data = pd.DataFrame(columns=['original_text','lang','polarity', 'sentiment'])\n",
+    "\n",
+    "tweets_data['original_text'] = tweets_df['original_text'].to_list()\n",
+    "tweets_data['lang'] = tweets_df['lang'].to_list()\n",
+    "tweets_data['polarity'] = tweets_df['polarity'].to_list()\n",
+    "tweets_data['sentiment'] = tweets_df['sentiment'].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# text Preprocessing\n",
+    "tweet_data['original_text']=tweet_data['original_text'].astype(str)\n",
+    "\n",
+    "# Convert to lowercase\n",
+    "tweet_data['original_text'] = tweet_data['original_text'].map(lambda x: x.lower())\n",
+    "\n",
+    "# Remove punctuation\n",
+    "tweet_data['original_text']= \\\n",
+    "tweet_data['original_text'].apply(lambda x: x.translate(str.maketrans(' ', ' ', string.punctuation)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting the distribution for dataset.\n",
+    "ax = tweets_df.groupby('target').count().plot(kind='bar', title='Distribution of data',legend=False)\n",
+    "ax.set_xticklabels(['Negative','Positive'], rotation=0)\n",
+    "# Storing data in lists.\n",
+    "text, sentiment = list(tweets_df['text']), list(tweets_df['target'])"
+   ]
   }
  ],
  "metadata": {
